jupyter-notebook/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-notebook
  namespace: jupyter-notebook
  labels:
    app: jupyter-notebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter-notebook
  template:
    metadata:
      labels:
        app: jupyter-notebook
    spec:
      containers:
        - name: jupyter-notebook
          image: jupyter/base-notebook:latest
          ports:
          - name: jupyter
            containerPort: 8888
          args:
            - start-notebook.sh
          volumeMounts:
            - name: jupyter-data
              mountPath: /home/jovyan
      volumes:
        - name: jupyter-data
          persistentVolumeClaim:
            claimName: jupyter-data-pvc
