jupyter-notebook/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter-service
  namespace: jupyter-notebook
spec:
  selector:
    app: jupyter-notebook
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: jupyter
