jupyter-notebook/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
  namespace: jupyter-notebook
spec:
  rules:
  - host: "jupyter-notebook.local.perelohome.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyter-service 
            port:
              number: 8888
  tls:
  - hosts:
    - jupyter-notebook.local.perelohome.com
    secretName: jupyter-server-tls-secret
